--- a/Retrofit/app/src/main/res/navigation/nav_graph.xml
+++ b/Retrofit/app/src/main/res/navigation/nav_graph.xml
@@ -35,5 +35,17 @@
     <fragment
         android:id="@+id/repositoryListFragment"
         android:name="com.skillbox.github.ui.repository_list.RepositoryListFragment"
-        android:label="RepositoryListFragment" />
+        android:label="RepositoryListFragment" >
+        <action
+            android:id="@+id/action_repositoryListFragment_to_detailInfoFragment"
+            app:destination="@id/detailInfoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailInfoFragment"
+        android:name="com.skillbox.github.ui.repository_list.DetailInfoFragment"
+        android:label="DetailInfoFragment" >
+        <argument
+            android:name="repository"
+            app:argType="com.skillbox.github.ui.repository_list.PublicRepository" />
+    </fragment>
 </navigation>
